[gd_scene load_steps=3 format=3 uid="uid://bi03chxkj2ynj"]

[ext_resource type="Script" path="res://_scripts/Location.gd" id="1_pd51d"]
[ext_resource type="Script" path="res://_scripts/LocationUI.gd" id="2_hd8o0"]

[node name="Location" type="Control"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 3
anchors_preset = 0
offset_right = 373.0
offset_bottom = 106.0
script = ExtResource("1_pd51d")

[node name="LocationUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_hd8o0")

[node name="ColorRect" type="ColorRect" parent="LocationUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.690196, 0.235294, 0.505882, 1)

[node name="Name" type="Label" parent="LocationUI"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -20.0
offset_right = -1.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
text = "Location 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="LocationUI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -39.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 10
text = "Description 1"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="PlayersContainer" type="GridContainer" parent="LocationUI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 94.0
offset_right = -76.0
offset_bottom = 33.0
grow_horizontal = 2
columns = 4

[node name="DiceNeeded" type="Control" parent="LocationUI"]
layout_mode = 1
anchors_preset = 0
offset_left = -13.0
offset_top = -12.0
offset_right = 27.0
offset_bottom = 13.0

[node name="ColorRect" type="ColorRect" parent="LocationUI/DiceNeeded"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DiceLabel" type="Label" parent="LocationUI/DiceNeeded"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "2"
horizontal_alignment = 1
vertical_alignment = 1
